--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -16,46 +16,25 @@
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" alpha="0.69999999999999996" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfl-S3-GzL">
-                                <rect key="frame" x="169" y="316" width="37" height="34"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfl-S3-GzL">
+                                <rect key="frame" x="60" y="305" width="255" height="35"/>
+                                <color key="backgroundColor" red="0.96620899438858032" green="0.29599744820155405" blue="0.53494453975362033" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="DSL-bx-7L7"/>
+                                </constraints>
                                 <size key="titleShadowOffset" width="250" height="50"/>
-                                <state key="normal" title="再生">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    <color key="titleShadowColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" title="再生"/>
                                 <connections>
                                     <action selector="startbutton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fvp-8k-rMf"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJg-Cx-bby">
-                                <rect key="frame" x="65" y="383" width="31" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                                <state key="normal" title="戻る">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="prev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Quu-VU-1QL"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Wz-Si-hvR">
-                                <rect key="frame" x="27" y="78" width="321" height="186"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <gestureRecognizers/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgn-z1-Q0b">
-                                <rect key="frame" x="27" y="78" width="321" height="186"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <connections>
-                                    <segue destination="mVP-P6-VMf" kind="show" id="h0I-4Q-LxC"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YD5-Aq-6N3">
-                                <rect key="frame" x="289" y="383" width="31" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YD5-Aq-6N3">
+                                <rect key="frame" x="265" y="365" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Aw2-em-1a8"/>
+                                </constraints>
                                 <state key="normal" title="進む">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
@@ -63,8 +42,51 @@
                                     <action selector="next:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4pm-oo-RJK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZJg-Cx-bby">
+                                <rect key="frame" x="60" y="365" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="XW8-sY-B7D"/>
+                                </constraints>
+                                <state key="normal" title="戻る">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="prev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Quu-VU-1QL"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Wz-Si-hvR">
+                                <rect key="frame" x="20" y="70" width="335" height="200"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="MJu-Ta-Cjz"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgn-z1-Q0b">
+                                <rect key="frame" x="20" y="70" width="335" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="MhE-fj-8wd"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="mVP-P6-VMf" kind="show" id="h0I-4Q-LxC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zgn-z1-Q0b" secondAttribute="trailing" constant="20" id="9Ms-tg-gse"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YD5-Aq-6N3" secondAttribute="trailing" constant="60" id="FQK-oc-01Q"/>
+                            <constraint firstItem="zgn-z1-Q0b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="NTp-I7-eDy"/>
+                            <constraint firstItem="ZJg-Cx-bby" firstAttribute="top" secondItem="gfl-S3-GzL" secondAttribute="bottom" constant="25" id="Onu-Yx-9wv"/>
+                            <constraint firstItem="ZJg-Cx-bby" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="TP4-FG-E80"/>
+                            <constraint firstItem="gfl-S3-GzL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="V9x-96-7OT"/>
+                            <constraint firstItem="YD5-Aq-6N3" firstAttribute="top" secondItem="gfl-S3-GzL" secondAttribute="bottom" constant="25" id="X1W-ys-uIX"/>
+                            <constraint firstItem="7Wz-Si-hvR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="ZRM-0x-fSR"/>
+                            <constraint firstItem="gfl-S3-GzL" firstAttribute="top" secondItem="7Wz-Si-hvR" secondAttribute="bottom" constant="35" id="dJl-KB-ffJ"/>
+                            <constraint firstItem="zgn-z1-Q0b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="gTZ-Mn-qcE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Wz-Si-hvR" secondAttribute="trailing" constant="20" id="o20-Lb-vDb"/>
+                            <constraint firstItem="7Wz-Si-hvR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="p87-2G-ryp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gfl-S3-GzL" secondAttribute="trailing" constant="60" id="pdU-t4-MIQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -86,20 +108,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aoP-nJ-GQa">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="501"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9W-oW-R9V">
-                                <rect key="frame" x="166" y="572" width="42" height="26"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9W-oW-R9V">
+                                <rect key="frame" x="100" y="550" width="175" height="30"/>
                                 <state key="normal" title="戻る"/>
                                 <connections>
                                     <segue destination="2KW-lB-36Y" kind="unwind" unwindAction="unwind:" id="eh2-l3-oG3"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aoP-nJ-GQa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="450"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="450" id="nuN-wb-7bd"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="M9W-oW-R9V" firstAttribute="top" secondItem="aoP-nJ-GQa" secondAttribute="bottom" constant="100" id="L7a-2y-Yzw"/>
+                            <constraint firstItem="M9W-oW-R9V" firstAttribute="leading" secondItem="fPp-6d-AUG" secondAttribute="leading" constant="100" id="OT2-BK-9SV"/>
+                            <constraint firstItem="aoP-nJ-GQa" firstAttribute="trailing" secondItem="fPp-6d-AUG" secondAttribute="trailing" id="fWW-Zt-3qS"/>
+                            <constraint firstItem="aoP-nJ-GQa" firstAttribute="leading" secondItem="fPp-6d-AUG" secondAttribute="leading" id="lVC-nR-JUW"/>
+                            <constraint firstItem="fPp-6d-AUG" firstAttribute="trailing" secondItem="M9W-oW-R9V" secondAttribute="trailing" constant="100" id="wVx-gD-sFx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fPp-6d-AUG"/>
                     </view>
                     <connections>
