--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -108,27 +108,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9W-oW-R9V">
-                                <rect key="frame" x="100" y="550" width="175" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9W-oW-R9V">
+                                <rect key="frame" x="137.5" y="550" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="c7p-l9-Dz8"/>
+                                </constraints>
                                 <state key="normal" title="戻る"/>
                                 <connections>
                                     <segue destination="2KW-lB-36Y" kind="unwind" unwindAction="unwind:" id="eh2-l3-oG3"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aoP-nJ-GQa">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aoP-nJ-GQa">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="450"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="450" id="nuN-wb-7bd"/>
+                                    <constraint firstAttribute="height" constant="450" id="icI-9b-ksb"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="M9W-oW-R9V" firstAttribute="top" secondItem="aoP-nJ-GQa" secondAttribute="bottom" constant="100" id="L7a-2y-Yzw"/>
-                            <constraint firstItem="M9W-oW-R9V" firstAttribute="leading" secondItem="fPp-6d-AUG" secondAttribute="leading" constant="100" id="OT2-BK-9SV"/>
+                            <constraint firstItem="M9W-oW-R9V" firstAttribute="centerX" secondItem="RsC-KX-dON" secondAttribute="centerX" id="5zs-cr-VOL"/>
+                            <constraint firstItem="aoP-nJ-GQa" firstAttribute="trailing" secondItem="fPp-6d-AUG" secondAttribute="trailing" id="ehX-55-BMb"/>
+                            <constraint firstItem="aoP-nJ-GQa" firstAttribute="leading" secondItem="fPp-6d-AUG" secondAttribute="leading" id="fSe-ie-lKw"/>
                             <constraint firstItem="aoP-nJ-GQa" firstAttribute="trailing" secondItem="fPp-6d-AUG" secondAttribute="trailing" id="fWW-Zt-3qS"/>
+                            <constraint firstItem="M9W-oW-R9V" firstAttribute="top" secondItem="aoP-nJ-GQa" secondAttribute="bottom" constant="100" id="hjD-Ex-Oy4"/>
+                            <constraint firstItem="aoP-nJ-GQa" firstAttribute="top" secondItem="RsC-KX-dON" secondAttribute="top" id="iLm-c8-Hdd"/>
                             <constraint firstItem="aoP-nJ-GQa" firstAttribute="leading" secondItem="fPp-6d-AUG" secondAttribute="leading" id="lVC-nR-JUW"/>
-                            <constraint firstItem="fPp-6d-AUG" firstAttribute="trailing" secondItem="M9W-oW-R9V" secondAttribute="trailing" constant="100" id="wVx-gD-sFx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fPp-6d-AUG"/>
                     </view>
